# Cutted

./: README.md  pyproject.toml  todo.md  todo.txt
.github/workflows/: python-package.yml
cutted/: __init__.py  app.py
cutted/core/: audio_processor.py  gemini.py  logger.py  transcribe.py
tests/: test_audio_processor.py
