[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cutted"
version = "0.3.3"
description = "AI-powered audio editor controllable via natural language."
readme = "README.md"
requires-python = ">=3.9, <=3.13"
license = "GPL-3.0" 
authors = [
    {name = "simon0302010", email = "simon0302010@gmail.com"}
]
dependencies = [
    "customtkinter",
    "matplotlib",
    "numpy",
    "pydub",
    "pygame",
    "google-genai",
    "python-dotenv"
]

[project.optional-dependencies]
whisper = ["whisper-timestamped"]

[project.urls]
Homepage = "https://github.com/simon0302010/Cutted"